[FIX] web: scrollbar when html/o2m is first child of page
before this commit: when html or o2m widget is first child of first notebook
page of form which does not have sheet tag, it shows unnecessary horizontal
scrollbar because of negative margin of 32px given in scss mixin which should
be applied only when there is a sheet tag in form but negative margin of 32px
is also applied when there is no sheet tag and due to which negative margin is
applied and horizontal scrollbar comes.

after this commit: when there is no sheet tag and html or o2m widge is first
child of first notebook page then negative margin of 32px will not applied,
negative margin of 32px will be applied only when there is a sheet tag.

task-2411627

closes odoo/enterprise#15519

Related: odoo/odoo#63961

--- a/web_enterprise/static/src/scss/form_view.scss
+++ b/web_enterprise/static/src/scss/form_view.scss
@@ -224,6 +224,26 @@
             border-bottom: none;
         }
     }
+
+    // Notebooks inside form without sheet tag
+    &.o_form_nosheet .o_notebook {
+        > .o_notebook_headers {
+            @include o-form-nosheet-negative-margin;
+            > .nav.nav-tabs {
+                @include o-form-nosheet-inner-left-padding;
+            }
+        }
+        > .tab-content > .tab-pane > :first-child {
+            // These elements will appear attached to the tabs
+            &.oe_form_field_html {
+                @include o-form-nosheet-negative-margin;
+            }
+            &.o_field_x2many.o_field_x2many_list {
+                @include o-form-nosheet-negative-margin;
+            }
+        }
+    }
+
     // Notebooks for small screen
     @include media-breakpoint-down(sm) {
         .o_notebook .o_notebook_headers {
